Fixed small error on Russian translation

--- a/ru/kicad.po
+++ b/ru/kicad.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: KiCad\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-14 09:38+0300\n"
-"PO-Revision-Date: 2018-05-14 10:32+0300\n"
+"PO-Revision-Date: 2018-05-14 13:04+0200\n"
 "Last-Translator: Baranovskiy Konstantin <baranovskiykonstantin@gmail.com>\n"
 "Language-Team: Russian\n"
 "Language: ru_RU\n"
@@ -20393,7 +20393,7 @@ msgid ""
 msgstr ""
 "Примечание: для значений зазора:\n"
 "- положительное значение означает, что маска больше, чем конт.пл.\n"
-"- отрицательное значение означает, что маска меньше, чем конт.пл.\n"
+"- отрицательное значение означает, что маска меньше, чем конт.пл."
 
 #: pcbnew/dialogs/dialog_mask_clearance_base.cpp:31
 msgid ""
